[tool.poetry]
name = "mxfold2"
version = "0.1.2"
description = "RNA secondary structure prediction using deep neural networks with thermodynamic integration"
authors = ["Kengo Sato <satoken@mail.dendai.ac.jp>"]
repository = "https://github.com/mxfold/mxfold2"
readme = "README.md"
license = "MIT"
#build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
torch = "^1.13"
tqdm = "*"
wheel = "*"
pybind11 = "^2.10"
pytorch-optimizer = "^2.5.0"

[tool.poetry.dev-dependencies]
pylint = "*"
jupyter = "*"
pandas = "*"
tensorboard = "*"
torch-tb-profiler = "*"

[tool.poetry.scripts]
mxfold2 = "mxfold2.__main__:main"

# [[tool.poetry.source]]
# name = "pytorch-cu116"
# url = "https://download.pytorch.org/whl/cu116/"
# secondary = true

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
