[tool.poetry]
name = "mxfold2"
version = "0.1.2"
description = "RNA secondary structure prediction using deep neural networks with thermodynamic integration"
authors = ["Kengo Sato <satoken@mail.dendai.ac.jp>"]
repository = "https://github.com/mxfold/mxfold2"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
torch = "^1.4"
torchvision = "^0"
tqdm = "^4.40"
wheel = "^0.38.0"
pybind11 = "^2.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
jupyter = "^1.0.0"
pandas = "^1.1.0"
tensorboard = "^2.3.0"

[tool.poetry.scripts]
mxfold2 = "mxfold2.__main__:main"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "setuptools", "pybind11"]
build-backend = "poetry.core.masonry.api"