[tool.poetry]
name = "mxfold2"
version = "0.2.0"
description = "RNA secondary structure prediction using deep neural networks with thermodynamic integration"
authors = ["Kengo Sato <satoken@mail.dendai.ac.jp>"]
repository = "https://github.com/mxfold/mxfold2"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "*"
torch = "*"
tqdm = "*"
pybind11 = "*"
pytorch-optimizer = "*"

[tool.poetry.group.dev.dependencies]
pylint = "*"
jupyter = "*"
pandas = "*"
tensorboard = "*"
torch-tb-profiler = "*"
scipy = "^1.11.3"

[tool.poetry.scripts]
mxfold2 = "mxfold2.__main__:main"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true


[build-system]
requires = ["poetry-core>=1.6.0", "setuptools>=42", "wheel", "pybind11"]
build-backend = "poetry.core.masonry.api"
